Moved a few of the desktop frameworks

--- a/docs/quickstart/web/cypress.mdx
+++ b/docs/quickstart/web/cypress.mdx
@@ -4,9 +4,11 @@ title: Cypress
 ---
 
 import PartialIntro from '@site/docs/_partials/_partials-intro_.mdx'
+import PatrialStructure from '@site/docs/_partials/_partials-project-structure_.mdx'
 import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 <PartialIntro/>
+
 
 ```
 $ git clone https://github.com/applitools/example-cypress-javascript-ufg.git
