--- a/docs/quickstart/web/appium-for-web/appium-web-csharp.mdx
+++ b/docs/quickstart/web/appium-for-web/appium-web-csharp.mdx
@@ -1,8 +1,6 @@
 ---
-sidebarDepth: 1
+title: C#
 ---
-
-<div class="tutorialContent">
 
 # Appium Web C# Tutorial
 The Applitools Eyes Selenium for C# SDK allows you to easily add visual checkpoints to your C# Appium web-related tests. It takes care of getting screenshots of your application from the underlying WebDriver, sending them to the Eyes server for validation and failing the test in case differences are found.
@@ -154,22 +152,3 @@ namespace Demos
 Congratulations! You've successfully run your first visual UI test with Applitools Eyes! A detailed report is ready for your inspection at the Applitools Eyes test manager. Watch this 5 minute video to get acquainted with the test manager and to learn the basics of baseline maintenance.
 
 [Login to Applitools](https://applitools.com/users/login) and analyze the results.
-
-<Video embedUrl="https://www.youtube.com/embed/W0GdsOdg7Xw?rel=0" />
-
-
-
-## Learn more
-Applitools Eyes is a powerful platform for automated visual UI testing that supports full page screenshots, page layout matching, cross-device and browser testing, test batching, baseline branching and merging, automated baseline maintenance, collaboration features, and much more. Applitools has over [40 SDKs](https://applitools.com/tutorial) supporting a broad range of testing environments.
-
-#### Reference documentation
-
-To learn more, check out the Applitools Eyes [documentation](https://applitools.com/docs) and tutorials for other testing environments.
-
-#### Request a demo
-If you want to see a demo of all our other features, you do [request a demo](https://applitools.com/request-demo?utm_source=tutorials)
-
-#### Knowledge base and Support
-You can search our [Knowldege base](https://help.applitools.com/hc/en-us/) for more information.  You can also file a contact our support team and [file a Ticket](https://help.applitools.com/hc/en-us/requests/new).<br/><br/><br/><span style="margin-right:15px;">[Terms & Conditions](https://applitools.com/terms-of-use)</span> <span style="margin-right:15px;font-weight:9">[Privacy Policy](https://applitools.com/privacy-policy)</span> <span style="margin-right:15px;font-weight:9">[GDPR](https://applitools.com/gdpr) </span>© 2021 Applitools. All rights reserved.
-
-</div>
