added the footer partial to each tutorial

--- a/docs/quickstart/codeless/pdfs.mdx
+++ b/docs/quickstart/codeless/pdfs.mdx
@@ -2,6 +2,7 @@
 sidebar_position: 4
 title: PDFs
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 
 # PDF Forms Tutorial
@@ -167,3 +168,5 @@ The parameters:
 Congratulations! You've successfully run your first visual UI test with Applitools Eyes! A detailed report is ready for your inspection at the Applitools Eyes test manager. Watch this 5 minute video to get acquainted with the test manager and to learn the basics of baseline maintenance.
 
 [Login to Applitools](https://applitools.com/users/login) and analyze the results.
+
+<PartialOutro/>
