--- a/docs/quickstart/desktop/windows-coded-UI.mdx
+++ b/docs/quickstart/desktop/windows-coded-UI.mdx
@@ -3,6 +3,7 @@ sidebar_position: 1
 title: Windows Coded UI
 description: This is a short description that we can use to intro the box
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 # Windows Coded-UI Tutorial
 
@@ -85,6 +86,4 @@ namespace Applitools
 Congratulations! You've successfully run your first visual UI test with Applitools Eyes! A detailed report is ready for your inspection at the Applitools Eyes test manager. Watch this 5 minute video to get acquainted with the test manager and to learn the basics of baseline maintenance.
 
 [Login to Applitools](https://applitools.com/users/login) and analyze the results.
-
-<Video embedUrl="https://www.youtube.com/embed/W0GdsOdg7Xw?rel=0" />
-
+<PartialOutro/>
