--- a/docs/quickstart/mobile/appium/appium-native-php.mdx
+++ b/docs/quickstart/mobile/appium/appium-native-php.mdx
@@ -1,6 +1,7 @@
 ---
 title: PHP
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 
 # Appium Native PHP Tutorial
@@ -106,3 +107,4 @@ Congratulations! You've successfully run your first visual UI test with Applitoo
 
 [Login to Applitools](https://applitools.com/users/login) and analyze the results.
 
+<PartialOutro/>
