--- a/docs/quickstart/mobile/calabash/android.mdx
+++ b/docs/quickstart/mobile/calabash/android.mdx
@@ -2,6 +2,7 @@
 sidebar_position: 2
 title: Calabash Android
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 ##  ✅ Prerequisites
 
@@ -124,3 +125,5 @@ Feature: Applitools Eyes Calabash SDK base functionality
 #    Then the entire element "android.widget.HorizontalScrollView" should match a baseline
     Then I check element "android.widget.HorizontalScrollView"
 ```
+
+<PartialOutro/>
