--- a/docs/quickstart/mobile/calabash/iOS.mdx
+++ b/docs/quickstart/mobile/calabash/iOS.mdx
@@ -2,6 +2,8 @@
 sidebar_position: 1
 title: Calabash iOS
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
+
 
 ## ✅ Prerequisites 
 
@@ -107,3 +109,5 @@ Feature: Sample Feature
     And I wait
     Then I check window
 ```
+
+<PartialOutro/>
