--- a/docs/quickstart/mobile/espresso.mdx
+++ b/docs/quickstart/mobile/espresso.mdx
@@ -2,6 +2,7 @@
 sidebar_position: 2
 title: Espresso
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 ## ✅ Prerequisites 
 
@@ -211,3 +212,5 @@ public class DocumentationExampleTest {
     }
 }
 ```
+
+<PartialOutro/>
