--- a/docs/quickstart/mobile/xcui/android.mdx
+++ b/docs/quickstart/mobile/xcui/android.mdx
@@ -1,6 +1,7 @@
 ---
 title: XCUI Objective C
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 
 # XCUI Objective-C Tutorial
@@ -58,6 +59,4 @@ Congratulations! You've successfully run your first visual UI test with Applitoo
 
 [Login to Applitools](https://applitools.com/users/login) and analyze the results.
 
-<Video embedUrl="https://www.youtube.com/embed/W0GdsOdg7Xw?rel=0" />
-
-
+<PartialOutro/>
