--- a/docs/quickstart/mobile/xcui/iOS.mdx
+++ b/docs/quickstart/mobile/xcui/iOS.mdx
@@ -1,6 +1,7 @@
 ---
 title: XCUI Swift
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 
 # XCUI Swift Tutorial
@@ -67,3 +68,5 @@ Congratulations! You've successfully run your first visual UI test with Applitoo
 Applitools Eyes is a powerful platform for automated visual UI testing that supports full page screenshots, page layout matching, cross-device and browser testing, test batching, baseline branching and merging, automated baseline maintenance, collaboration features, and much more. Applitools has over [40 SDKs](https://applitools.com/tutorial) supporting a broad range of testing environments.
 
 
+
+<PartialOutro/>
