--- a/docs/quickstart/screenshots/c-sharp.mdx
+++ b/docs/quickstart/screenshots/c-sharp.mdx
@@ -2,6 +2,7 @@
 sidebar_position: 2
 title: Screenshot C#
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 
 
@@ -128,3 +129,5 @@ namespace ApplitoolsTutorial
     }
 }
 ```
+
+<PartialOutro/>
