--- a/docs/quickstart/screenshots/cli.mdx
+++ b/docs/quickstart/screenshots/cli.mdx
@@ -2,6 +2,8 @@
 sidebar_position: 1
 title: CLI Tutorial
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
+
 The Applitools CLI Tool allows you to easily run visual UI tests on a collection of image files, by placing them inside a directory (also works with nested directory structure). It runs as a standalone jar file and can be invoked as a process by any programming language.
 
 ## Steps for running tests
@@ -125,3 +127,5 @@ In order to include a capture of the entire image too, add an empty line as part
 Congratulations! You've successfully run your first visual UI test with Applitools Eyes! A detailed report is ready for your inspection at the Applitools Eyes test manager. Watch this 5 minute video to get acquainted with the test manager and to learn the basics of baseline maintenance.
 
 [Login to Applitools](https://applitools.com/users/login) and analyze the results.
+
+<PartialOutro/>
