--- a/docs/quickstart/screenshots/javascript.mdx
+++ b/docs/quickstart/screenshots/javascript.mdx
@@ -2,6 +2,7 @@
 sidebar_position: 4
 title: Screenshot JavaScript
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 
 
@@ -127,3 +128,5 @@ The Applitools Eyes Screenshot Javascript SDK allows you to easily add visual ch
 ### More information
 
 The `@applitools/eyes-images` npm package page contain more information. Visit [eyes-images SDK repo](https://www.npmjs.com/package/@applitools/eyes-images) to find out more about what's possible with Applitools' JavaScript Images SDK.
+
+<PartialOutro/>
