--- a/docs/quickstart/screenshots/ruby.mdx
+++ b/docs/quickstart/screenshots/ruby.mdx
@@ -3,6 +3,7 @@ sidebar_position: 7
 title: Screenshot Ruby
 ---
 
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 Want to learn more about the Applitools platform and how it works? First get started with one of the following:
 
@@ -92,3 +93,5 @@ ensure
   puts runner.get_all_test_results
 end
 ```
+
+<PartialOutro/>
