--- a/docs/quickstart/web/appium-for-web/appium-web-javascript.mdx
+++ b/docs/quickstart/web/appium-for-web/appium-web-javascript.mdx
@@ -1,6 +1,7 @@
 ---
 title: Javascript
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 # Appium Web JavaScript Tutorial
 The Applitools Eyes Appium JavaScript SDK allows you to easily add visual checkpoints to your JavaScript Appium tests. It takes care of getting screenshots of your application from the underlying WebDriver, sending them to the Eyes server for validation and failing the test in case differences are found.
@@ -78,3 +79,5 @@ Congratulations! You've successfully run your first visual UI test with Applitoo
 
 [Login to Applitools](https://applitools.com/users/login) and analyze the results.
 
+
+<PartialOutro/>
