--- a/docs/quickstart/web/appium-for-web/appium-web-php.mdx
+++ b/docs/quickstart/web/appium-for-web/appium-web-php.mdx
@@ -1,6 +1,9 @@
 ---
 title: PHP
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
+
 # Appium Web PHP Tutorial
 Documentation for Eyes Appium Web PHP is not available yet.
 Please submit a support ticket [here](https://help.applitools.com/hc/en-us/requests/new)
+<PartialOutro/>
