--- a/docs/quickstart/web/leanft/leanft-c.mdx
+++ b/docs/quickstart/web/leanft/leanft-c.mdx
@@ -2,6 +2,7 @@
 sidebar_position: 2
 title: LeanFT C#
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 The Applitools Eyes LeanFT C# SDK allows you to easily add visual checkpoints to your C# LeanFT tests. It takes care of getting screenshots of your application from the underlying LeanFT, sending them to the Eyes server for validation and failing the test in case differences are found.
 
@@ -87,3 +88,5 @@ namespace Applitools
 Congratulations! You've successfully run your first visual UI test with Applitools Eyes! A detailed report is ready for your inspection at the Applitools Eyes test manager. Watch this 5 minute video to get acquainted with the test manager and to learn the basics of baseline maintenance.
 
 [Login to Applitools](https://applitools.com/users/login) and analyze the results.
+
+<PartialOutro/>
