--- a/docs/quickstart/web/leanft/leanft-javascript.mdx
+++ b/docs/quickstart/web/leanft/leanft-javascript.mdx
@@ -3,6 +3,9 @@ sidebar_position: 1
 title: LeanFT JavaScript
 ---
 
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
+
+
 The Applitools Eyes LeanFT Javascript SDK allows you to easily add visual checkpoints to your Javascript LeanFT tests. It takes care of getting screenshots of your application from the underlying LeanFT, sending them to the Eyes server for validation and failing the test in case differences are found.
 
 ## Install the SDK
@@ -67,3 +70,5 @@ Web.Browser.launch(Web.BrowserType.Chrome)
 Congratulations! You've successfully run your first visual UI test with Applitools Eyes! A detailed report is ready for your inspection at the Applitools Eyes test manager. Watch this 5 minute video to get acquainted with the test manager and to learn the basics of baseline maintenance.
 
 [Login to Applitools](https://applitools.com/users/login) and analyze the results.
+
+<PartialOutro/>
