--- a/docs/quickstart/web/protractor.mdx
+++ b/docs/quickstart/web/protractor.mdx
@@ -3,6 +3,9 @@ sidebar_position: 6
 title: Protractor
 ---
 
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
+
+
 ## ✅ Prerequisites 
 
 1. Create a [free Applitools account](https://applitools.com/users/register) and get the Applitools API KEY
@@ -288,3 +291,5 @@ describe('DemoApp - ClassicRunner', function () {
   });
 });
 ```
+
+<PartialOutro/>
