--- a/docs/quickstart/web/puppeteer.mdx
+++ b/docs/quickstart/web/puppeteer.mdx
@@ -2,6 +2,7 @@
 sidebar_position: 4
 title: Puppeteer
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 ## Getting Started with Applitools Eyes & Puppeteer
 
@@ -145,3 +146,5 @@ https://github.com/applitools/tutorial-puppeteer
 ### More information
 
 The `@applitools/eyes-puppeteer` npm package page contain more information about advanced configuration, best practices and troubleshooting. Visit [eyes-puppeteer SDK repo](https://www.npmjs.com/package/@applitools/eyes-puppeteer) to find out more about what's possible with Applitools' Puppeteer SDK.
+
+<PartialOutro/>
