--- a/docs/quickstart/web/selenium/java.mdx
+++ b/docs/quickstart/web/selenium/java.mdx
@@ -3,6 +3,7 @@ sidebar_position: 1
 title: Java
 ---
 
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 There are two ways to automate visual tests with Selenium in Java:
 
@@ -42,3 +43,5 @@ and you must run visual test instances for each browser you want to cover.
 
 If you want to try the classic runner,
 take the tutorial for [Selenium Java JUnit with the Classic Runner](./selenium-java-junit-classic.md).
+
+<PartialOutro/>
