--- a/docs/quickstart/web/selenium/javascript.mdx
+++ b/docs/quickstart/web/selenium/javascript.mdx
@@ -3,6 +3,9 @@ sidebar_position: 2
 title: JavaScript
 ---
 
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
+
+
 ## Getting Started with Applitools
 
 Want to learn more about the Applitools platform and how it works? First get started with one of the following:
@@ -268,3 +271,5 @@ describe('DemoApp - ClassicRunner', function () {
   });
 });
 ```
+
+<PartialOutro/>
