--- a/docs/quickstart/web/selenium/python.mdx
+++ b/docs/quickstart/web/selenium/python.mdx
@@ -2,6 +2,8 @@
 sidebar_position: 4
 title: Python
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
+
 
 ## Getting Started with Applitools
 
@@ -263,3 +265,5 @@ def test_tutorial(eyes, driver):
     # End the test.
     eyes.close(False)
 ```
+
+<PartialOutro/>
