--- a/docs/quickstart/web/storybook/storybook-react.mdx
+++ b/docs/quickstart/web/storybook/storybook-react.mdx
@@ -3,6 +3,9 @@ sidebar_position: 2
 title: Storybook React
 ---
 
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
+
+
 ## Getting Started with Applitools
 
 Want to learn more about the Applitools platform and how it works? First get started with one of the following:
@@ -80,3 +83,5 @@ The picture below shows how it works
 ### More information
 
 The `@applitools/eyes-storybook` npm package page contain more information about advanced configuration, best practices and troubleshooting. Visit [eyes-storybook SDK repo](https://www.npmjs.com/package/@applitools/eyes-storybook) to find out more about what's possible with Applitools' Storybook SDK.
+
+<PartialOutro/>
