--- a/docs/quickstart/web/testcafe.mdx
+++ b/docs/quickstart/web/testcafe.mdx
@@ -2,6 +2,7 @@
 sidebar_position: 7
 title: Testcafe
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 ## Getting Started with Applitools
 
@@ -143,3 +144,6 @@ module.exports = {
 ### More information
 
 The `@applitools/eyes-testcafe` npm package page contain more information about advanced configuration, best practices and troubleshooting. Visit [eyes-testcafe SDK repo](https://www.npmjs.com/package/@applitools/eyes-testcafe) to find out more about what's possible with Applitools' TestCafe SDK.
+
+
+<PartialOutro/>
