--- a/docs/quickstart/web/watir.mdx
+++ b/docs/quickstart/web/watir.mdx
@@ -2,6 +2,7 @@
 sidebar_position: 8
 title: Watir
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 ## Getting Started with Applitools
 
@@ -123,3 +124,6 @@ ensure
   puts runner.get_all_test_results
 end
 ```
+
+
+<PartialOutro/>
