--- a/docs/quickstart/web/webdriver/webdriverio-4.mdx
+++ b/docs/quickstart/web/webdriver/webdriverio-4.mdx
@@ -3,6 +3,9 @@ sidebar_position: 1
 title: WebdriverIO 4
 ---
 
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
+
+
 *Note: This is for WebdriverIO 4. There are different tutorials for <a href="/tutorials/webdriverio5.html">WebdriverIO 5</a> and <a href="/tutorials/webdriverio6.html">WebdriverIO 6</a>.*
 
 ## Getting Started with Applitools
@@ -307,3 +310,5 @@ const {
   }
 })();
 ```
+
+<PartialOutro/>
