--- a/docs/quickstart/web/webdriver/webdriverio-5.mdx
+++ b/docs/quickstart/web/webdriver/webdriverio-5.mdx
@@ -2,6 +2,9 @@
 sidebar_position: 2
 title: WebdriverIO 5
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
+
+
 *Note: This is for WebdriverIO 5. There are different tutorials for <a href="/tutorials/webdriverio.html">WebdriverIO 4</a> and <a href="/tutorials/webdriverio6.html">WebdriverIO 6</a>.*
 
 ## Getting Started with Applitools
@@ -314,3 +317,5 @@ describe('wdio5', function () {
 
 });
 ```
+
+<PartialOutro/>
