--- a/docs/quickstart/web/webdriver/webdriverio-6.mdx
+++ b/docs/quickstart/web/webdriver/webdriverio-6.mdx
@@ -2,6 +2,8 @@
 sidebar_position: 3
 title: WebdriverIO 6
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
+
 
 # WebdriverIO 6 tutorial
 
@@ -350,3 +352,5 @@ describe('ACME Demo App - wdio6', function () {
   
 });
 ```
+
+<PartialOutro/>
