--- a/docs/quickstart/desktop/windows-uft.mdx
+++ b/docs/quickstart/desktop/windows-uft.mdx
@@ -3,6 +3,7 @@ sidebar_position: 2
 title: Windows UFT
 description: This is a short description that we can use to intro the box
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 
 # Windows UFT Tutorial
@@ -66,5 +67,4 @@ Congratulations! You've successfully run your first visual UI test with Applitoo
 
 [Login to Applitools](https://applitools.com/users/login) and analyze the results.
 
-<Video embedUrl="https://www.youtube.com/embed/W0GdsOdg7Xw?rel=0" />
-
+<PartialOutro/>
