--- a/docs/quickstart/mobile/appium/appium-native-csharp.mdx
+++ b/docs/quickstart/mobile/appium/appium-native-csharp.mdx
@@ -1,7 +1,9 @@
 ---
 title: C#
 ---
-## 5.1 🚀 - Run the existing demo app 
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
+
+## 🚀 - Run the existing demo app 
 1. Get the code:
     * Option 1: `git clone https://github.com/applitools/tutorial-appium-csharp-basic`
     * Option 2: Download it as a [Zip file](https://github.com/applitools/tutorial-appium-csharp-basic/archive/master.zip) and unzip it.
@@ -89,3 +91,5 @@ namespace ApplitoolsTutorial
 }
 
 ```
+
+<PartialOutro/>
