--- a/docs/quickstart/mobile/appium/appium-native-javascript.mdx
+++ b/docs/quickstart/mobile/appium/appium-native-javascript.mdx
@@ -1,6 +1,7 @@
 ---
 title: Javascript
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 
 # Appium Native JavaScript Tutorial
@@ -74,3 +75,4 @@ main();
 Congratulations! You've successfully run your first visual UI test with Applitools Eyes! A detailed report is ready for your inspection at the Applitools Eyes test manager. Watch this 5 minute video to get acquainted with the test manager and to learn the basics of baseline maintenance.
 
 [Login to Applitools](https://applitools.com/users/login) and analyze the results.
+<PartialOutro/>
