--- a/docs/quickstart/mobile/appium/appium-native-python.mdx
+++ b/docs/quickstart/mobile/appium/appium-native-python.mdx
@@ -1,6 +1,7 @@
 ---
 title: Python
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 
 # Appium Native Python Tutorial
@@ -112,3 +113,4 @@ Congratulations! You've successfully run your first visual UI test with Applitoo
 
 [Login to Applitools](https://applitools.com/users/login) and analyze the results.
 
+<PartialOutro/>
