--- a/docs/quickstart/mobile/appium/appium-native-ruby.mdx
+++ b/docs/quickstart/mobile/appium/appium-native-ruby.mdx
@@ -1,6 +1,7 @@
 ---
 title: Ruby
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 
 # Appium Native Ruby Tutorial
@@ -111,3 +112,4 @@ Congratulations! You've successfully run your first visual UI test with Applitoo
 
 [Login to Applitools](https://applitools.com/users/login) and analyze the results.
 
+<PartialOutro/>
