--- a/docs/quickstart/screenshots/java.mdx
+++ b/docs/quickstart/screenshots/java.mdx
@@ -2,6 +2,7 @@
 sidebar_position: 3
 title: Screenshot Java
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 
 
@@ -122,3 +123,5 @@ public class DemoTest {
     }
 }
 ```
+
+<PartialOutro/>
