--- a/docs/quickstart/screenshots/python.mdx
+++ b/docs/quickstart/screenshots/python.mdx
@@ -2,6 +2,7 @@
 sidebar_position: 5
 title: Screenshot Python
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 
 Want to learn more about the Applitools platform and how it works? First get started with one of the following:
@@ -92,3 +93,5 @@ def test_tutorial(eyes):
     # End the test.
     eyes.close(False)
 ```
+
+<PartialOutro/>
