--- a/docs/quickstart/web/appium-for-web/appium-web-python.mdx
+++ b/docs/quickstart/web/appium-for-web/appium-web-python.mdx
@@ -1,6 +1,7 @@
 ---
 title: Python
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 # Appium Web Python Tutorial
 The Applitools Eyes Appium Python SDK allows you to easily add visual checkpoints to your Python Appium tests. It takes care of getting screenshots of your application from the underlying WebDriver, sending them to the Eyes server for validation and failing the test in case differences are found.
@@ -127,3 +128,5 @@ class HelloWorld:
 Congratulations! You've successfully run your first visual UI test with Applitools Eyes! A detailed report is ready for your inspection at the Applitools Eyes test manager. Watch this 5 minute video to get acquainted with the test manager and to learn the basics of baseline maintenance.
 
 [Login to Applitools](https://applitools.com/users/login) and analyze the results.
+
+<PartialOutro/>
