--- a/docs/quickstart/web/appium-for-web/appium-web-ruby.mdx
+++ b/docs/quickstart/web/appium-for-web/appium-web-ruby.mdx
@@ -2,6 +2,7 @@
 sidebar_position: 1
 title: Ruby
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 
 ## Appium Web Ruby Tutorial
@@ -135,3 +136,5 @@ end
 Congratulations! You've successfully run your first visual UI test with Applitools Eyes! A detailed report is ready for your inspection at the Applitools Eyes test manager. Watch this 5 minute video to get acquainted with the test manager and to learn the basics of baseline maintenance.
 
 [Login to Applitools](https://applitools.com/users/login) and analyze the results.
+
+<PartialOutro/>
