--- a/docs/quickstart/web/capybara.mdx
+++ b/docs/quickstart/web/capybara.mdx
@@ -2,6 +2,7 @@
 sidebar_position: 10
 title: Capybara
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
 
 # Cypress Tutorial
 
@@ -193,12 +194,5 @@ The picture below shows how it works
 
 The `@applitools/eyes-cypress` npm package page contain more information about advanced configuration, best practices and troubleshooting. Visit [eyes-cypress SDK repo](https://www.npmjs.com/package/@applitools/eyes-cypress) to find out more about what's possible with Applitools' Cypress SDK.
 
-## Resources
 
-- [Troubleshooting Common Issues](/getting-started/common-issues.html)
-- [Reference documentation](https://applitools.com/docs)
-- [Request a demo](https://applitools.com/request-demo?utm_source=tutorials)
-- [Knowledge base](https://help.applitools.com/hc/en-us/)
-- [File a Ticket](https://help.applitools.com/hc/en-us/requests/new).
-
-
+<PartialOutro/>
