--- a/docs/quickstart/web/selenium/php.mdx
+++ b/docs/quickstart/web/selenium/php.mdx
@@ -2,6 +2,8 @@
 sidebar_position: 5
 title: PHP
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
+
 
 The Applitools Eyes Selenium for PHP SDK allows you to easily add visual checkpoints to your Php Selenium tests. It takes care of getting screenshots of your application from the underlying WebDriver, sending them to the Eyes server for validation and failing the test in case differences are found.
 
@@ -108,3 +110,5 @@ $test->demo();
 Congratulations! You've successfully run your first visual UI test with Applitools Eyes! A detailed report is ready for your inspection at the Applitools Eyes test manager. Watch this 5 minute video to get acquainted with the test manager and to learn the basics of baseline maintenance.
 
 [Login to Applitools](https://applitools.com/users/login) and analyze the results.
+
+<PartialOutro/>
