--- a/docs/quickstart/web/selenium/ruby.mdx
+++ b/docs/quickstart/web/selenium/ruby.mdx
@@ -2,6 +2,8 @@
 sidebar_position: 4
 title: Ruby
 ---
+import PartialOutro from '@site/docs/_partials/_partials-outro_.mdx'
+
 
 ## Getting Started with Applitools
 
@@ -219,3 +221,5 @@ ensure
   puts runner.get_all_test_results
 end
 ```
+
+<PartialOutro/>
