--- a/docs/guides/ci/circleci.mdx
+++ b/docs/guides/ci/circleci.mdx
@@ -1,9 +1,9 @@
 ---
 sidebar_position: 6
-title: How to add Applitools to Jenkins
+title: Adding Applitools To CircleCI
 ---
 
-# How to add Applitools to Jenkins
+# How to add Applitools to CircleCI
 
 You have just learned the **basics of Docusaurus** and made some changes to the **initial template**.
 
