--- a/docs/platform/applitools-eyes/accessibility.mdx
+++ b/docs/platform/applitools-eyes/accessibility.mdx
@@ -1,10 +1,9 @@
 ---
-sidebar_position: 1
-title: Overview
+sidebar_position: 5
+title: Accessibility Testing
+description: Read a quick overview of our Visual AI engine
 ---
 
-# Applitools Eyes
+# Applitools Root Cause Analysis
 
 Applitools Eyes is a powerful platform for automated visual UI testing that supports full page screenshots, page layout matching, cross-device and browser testing, test batching, baseline branching and merging, automated baseline maintenance, collaboration features, and much more.
-
-[Applitools has SDKs](https://applitools.com/tutorial) for the all popular programming languages and test runners providing full test coverage for web, mobile, desktop, PDF, TV OS's, IoT, Images, and more.
