--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -3,11 +3,12 @@ sidebar_position: 1
 title: Introduction
 description: My document description
 hide_table_of_contents: true
+slug: /
 ---
 
-import EyesIcon from '@site/static/img/apple-icon.png'
-import UFGIcon from '@site/static/img/applitools-ufg-icon.svg'
-import NMGIcon from '@site/static/img/applitools-nmg-icon.svg'
+import EyesIcon from '@site/static/img/applitools/eyes-icon.svg'
+import UFGIcon from '@site/static/img/applitools/ufg-icon.svg'
+import NMGIcon from '@site/static/img/applitools/nmg-icon.svg'
 import Link from '@docusaurus/Link'
 import AngularLogo from '@site/static/img/libraries/angular-icon.svg'
 import SeleniumLogo from '@site/static/img/libraries/selenium-icon.svg'
@@ -27,32 +28,30 @@ The Applitools Test Cloud is made up of several distinct modules that can be use
 
 <div className="">
   <div className="row">
-     <div class="col col--6">
-      <Link class="card" to="/tutorials/platform/applitools-eyes/overview">
+     <div class="col col--4">
+      <Link class="card" to="/docs/platform/applitools-eyes/overview">
         <div class="card__body">
-        <img src={EyesIcon} style={{maxWidth:'50px'}}/>
-            <h4>Eyes</h4>
-            <p>The industry leading Visual AI engine.</p>
+          <EyesIcon title="Eyes Icon" style={{maxWidth:'50px', maxHeight:'50px'}}/>
+          <h4>Eyes</h4>
+          <p>AI powered regressions testing engine.</p>
         </div>
       </Link>
     </div>
-    <div class="col col--6">
-      <Link class="card" to="/tutorials/platform/applitools-ufg">
+    <div class="col col--4">
+      <Link class="card" to="/docs/platform/applitools-ufg">
         <div class="card__body">
-          <img src={EyesIcon} style={{maxWidth:'50px'}}/>
+          <UFGIcon title="UFG Icon" style={{maxWidth:'50px', maxHeight:'50px'}}/>
           <h4>Ultrafast Test Grid</h4>
-          <p>A cloud-based testing grid for web and mobile browsers.</p>
+          <p>Cloud testing grid for web and mobile browsers.</p>
         </div>
       </Link>
     </div>
-  </div>
-  <div className="row">
-    <div class="col col--6">
-      <Link class="card" to="/tutorials/platform/applitools-nmg">
+    <div class="col col--4">
+      <Link class="card" to="/docs/platform/applitools-nmg">
         <div class="card__body">
-        <img src={EyesIcon} style={{maxWidth:'50px'}}/>
+        <NMGIcon title="NMG Icon" style={{maxWidth:'50px', maxHeight:'50px'}}/>
           <h4>Native Mobile Grid</h4>
-           <p>A cloud-based testing grid for Mobile Devices.</p>
+           <p>Cloud testing grid for Mobile Devices.</p>
         </div>
       </Link>
     </div>
