--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -1,6 +1,7 @@
 ---
 sidebar_position: 1
 title: Introduction
+sidebar_label: Home
 description: My document description
 hide_table_of_contents: true
 slug: /
@@ -24,7 +25,7 @@ Applitools is a visual testing platform that uses Visual AI to validate the UI o
 
 ## The Applitools Test Cloud
 
-The Applitools Test Cloud is made up of several distinct modules that can be used together.
+The Applitools Test Cloud is made up of several Applitools products that can be used together to help organizations test their application's frontend and documents.
 
 <div className="">
   <div className="row">
