--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 1
 title: Introduction
 sidebar_label: Home
-description: My document description
+description: Welcome to Applitools Documentation
 hide_table_of_contents: true
 slug: /
 ---
