--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 1
-title: Introduction
+title: Applitools
 sidebar_label: Home
 description: Welcome to Applitools Documentation
 hide_table_of_contents: true
@@ -21,38 +21,38 @@ import MobileFrameworks from '@site/src/components/mobileframeworks/index.tsx'
 import DesktopFrameworks from '@site/src/components/desktopframeworks/index.tsx'
 import Codeless from '@site/src/components/codeless/index.tsx'
 
-Applitools is a visual testing platform that uses Visual AI to validate the UI or Components of web and mobile applications. 
+Applitools is a test automation platform that uses Visual AI to validate that the frontend of an application looks and works right. 
 
-## The Applitools Test Cloud
+## The Applitools Platform
 
-The Applitools Test Cloud is made up of several Applitools products that can be used together to help organizations test their application's frontend and documents.
+The Applitools Ultrafast Test Cloud is made up of several Applitools products that can be used together to help organizations test their application's frontend and documents.
 
 <div className="">
   <div className="row">
      <div class="col col--4">
-      <Link class="card" to="/docs/platform/applitools-eyes/overview">
+      <Link class="card" to="/platform/applitools-eyes">
         <div class="card__body">
           <EyesIcon title="Eyes Icon" style={{maxWidth:'50px', maxHeight:'50px'}}/>
           <h4>Eyes</h4>
-          <p>AI powered regressions testing engine.</p>
+          <p>AI powered regression testing engine for visual, functional, and accessibility testing.</p>
         </div>
       </Link>
     </div>
     <div class="col col--4">
-      <Link class="card" to="/docs/platform/applitools-ufg">
+      <Link class="card" to="/platform/applitools-ufg">
         <div class="card__body">
           <UFGIcon title="UFG Icon" style={{maxWidth:'50px', maxHeight:'50px'}}/>
           <h4>Ultrafast Test Grid</h4>
-          <p>Cloud testing grid for web and mobile browsers.</p>
+          <p>Cross-browser testing cloud for web and mobile browsers, like Chrome, Safari, and Edge.</p>
         </div>
       </Link>
     </div>
     <div class="col col--4">
-      <Link class="card" to="/docs/platform/applitools-nmg">
+      <Link class="card" to="/platform/applitools-nmg">
         <div class="card__body">
         <NMGIcon title="NMG Icon" style={{maxWidth:'50px', maxHeight:'50px'}}/>
           <h4>Native Mobile Grid</h4>
-           <p>Cloud testing grid for Mobile Devices.</p>
+           <p>Cross-device testing cloud for native mobile apps running on Android and iOS devices.</p>
         </div>
       </Link>
     </div>
@@ -60,7 +60,7 @@ The Applitools Test Cloud is made up of several Applitools products that can be 
  </div>
 
  ## Quickstart
-Choose your favorite framework or language and get started by adding the Applitools SDK.
+To get started quickly, choose your favorite framework or language and add the approriate Applitools SDK to your project.
 ### Web 
 
 <WebFrameworks />
