--- a/docs/platform/applitools-eyes/root-cause-analysis.mdx
+++ b/docs/platform/applitools-eyes/root-cause-analysis.mdx
@@ -1,7 +1,7 @@
 ---
-sidebar_position: 4
+sidebar_position: 3
 title: Root Cause Analysis
-description: Read a quick overview of our Visual AI engine
+sidebar_title: Root Cause Analysis
 ---
 
 # Applitools Root Cause Analysis
