--- a/docs/platform/applitools-eyes/match-level.mdx
+++ b/docs/platform/applitools-eyes/match-level.mdx
@@ -1,7 +1,7 @@
 ---
-sidebar_position: 3
+sidebar_position: 2
 title: Setting Match Level 
-description: Read a quick overview of our Visual AI engine
+sidebar_title: Match Level
 ---
 
 # Applitools Match Level
